fix: not flickering when hovering with fieldn the section's bottom

--- a/src/pages/FormEditor/FormSandbox/FormStructure/FormSectionElement/style.module.css
+++ b/src/pages/FormEditor/FormSandbox/FormStructure/FormSectionElement/style.module.css
@@ -37,6 +37,11 @@
     width: 100%;
 }
 
+.bottomDropZone {
+    height: 28px;
+    flex-shrink: 0;
+}
+
 .emptySectionPlaceholder {
     display: flex;
     flex: 1;
